tests/types/errors/legacy_method_missing_fn.mog
type Box struct {
  value() i32 {
    return 1
  }
}
